Placeholder text for newsletter signup in banner alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ nav {
     height: 26px;
     font-size: 13;
     font-weight: 400;
+    line-height: 20px;
 }
 
 .banner-newsletter-signup-button {
